--- a/USTHWeather/app/src/main/res/layout/empty.xml
+++ b/USTHWeather/app/src/main/res/layout/empty.xml
@@ -1,10 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".WeatherActivity">
+    tools:context=".WeatherActivity"
+    android:orientation="vertical"
+    android:background="#ddddfc">
 
-</FrameLayout>
+    <fragment
+        android:id="@+id/fragment_weather"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:name="vn.edu.usth.weather.WeatherFragment"/>
+
+
+    <fragment
+        android:id="@+id/fragment_forecast"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:name="vn.edu.usth.weather.ForecastFragment"/>
+
+
+</LinearLayout>
