--- a/USTHWeather/app/src/main/res/layout/forecast_fragment.xml
+++ b/USTHWeather/app/src/main/res/layout/forecast_fragment.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fragment_container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ddddfc"
-    android:layout_margin="5dp"
+    android:layout_margin="10dp"
     android:focusableInTouchMode="true"
-    android:weightSum="7"
     android:orientation="vertical">
+    
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:id="@+id/fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="7"
+            android:orientation="vertical"/>
+    </ScrollView>
 
 
 </LinearLayout>
