--- a/USTHWeather/app/src/main/res/layout/weather_fragment.xml
+++ b/USTHWeather/app/src/main/res/layout/weather_fragment.xml
@@ -13,6 +13,7 @@
         android:layout_alignParentStart="true" />
 
     <ImageView
+        android:id="@+id/imagecenter"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_centerInParent="true"
