--- a/USTHWeather/app/src/main/res/layout/empty.xml
+++ b/USTHWeather/app/src/main/res/layout/empty.xml
@@ -9,6 +9,11 @@
     android:orientation="vertical"
     android:background="#ddddfc">
 
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/ViewPager"
         android:layout_height="match_parent"
