--- a/USTHWeather/app/src/main/res/layout/weather_fragment.xml
+++ b/USTHWeather/app/src/main/res/layout/weather_fragment.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#baf7ce">
+    android:background="@color/colorBlue">
 
     <TextView
         android:id="@+id/weather_desc"
