--- a/USTHWeather/app/src/main/res/layout/weather_and_forecast_fragment.xml
+++ b/USTHWeather/app/src/main/res/layout/weather_and_forecast_fragment.xml
@@ -14,5 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/forecastFragment"
-        android:name="vn.edu.usth.weather.ForecastFragment"/>
+        android:name="vn.edu.usth.weather.ForecastFragment"
+        android:background="@color/colorBlue"/>
 </LinearLayout>
