--- a/USTHWeather/app/src/main/res/layout/empty.xml
+++ b/USTHWeather/app/src/main/res/layout/empty.xml
@@ -7,15 +7,19 @@
     android:layout_height="match_parent"
     tools:context=".WeatherActivity"
     android:orientation="vertical"
+    android:fitsSystemWindows="true"
     android:background="@color/colorMain">
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+
+
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/ViewPager"
         android:layout_height="match_parent"
-        android:layout_width="match_parent"/>
+        android:layout_width="match_parent">
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </androidx.viewpager.widget.ViewPager>
 </LinearLayout>
