--- a/USTHWeather/app/src/main/res/layout/weather_fragment.xml
+++ b/USTHWeather/app/src/main/res/layout/weather_fragment.xml
@@ -10,6 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_alignParentLeft="true"
         android:text="@string/weather_desc"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="15dp"
         android:layout_alignParentStart="true" />
 
     <ImageView
