--- a/USTHWeather/app/src/main/res/layout/weather_fragment.xml
+++ b/USTHWeather/app/src/main/res/layout/weather_fragment.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_alignParentLeft="true"
         android:text="@string/weather_desc"
+        android:textColor="@color/colorBlack"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="15dp"
         android:layout_alignParentStart="true" />
@@ -26,6 +27,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/weather_location"
         android:text="@string/weather_loc"
+        android:textColor="@color/colorBlack"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
