--- a/USTHWeather/app/src/main/res/layout/empty.xml
+++ b/USTHWeather/app/src/main/res/layout/empty.xml
@@ -9,9 +9,10 @@
     android:orientation="vertical"
     android:fitsSystemWindows="true"
     android:background="@color/colorMain">
-
-
-
+    
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/ViewPager"
@@ -22,4 +23,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </androidx.viewpager.widget.ViewPager>
+        <ImageView
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_gravity="bottom|center"
+            android:layout_margin="25dp"
+            android:id="@+id/logo"
+            android:alpha="0.8"/>
+    </FrameLayout>
 </LinearLayout>
