--- a/USTHWeather/app/src/main/res/layout/weather_and_forecast_fragment.xml
+++ b/USTHWeather/app/src/main/res/layout/weather_and_forecast_fragment.xml
@@ -8,7 +8,42 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:id="@+id/weatherFragment"
-        android:name="vn.edu.usth.weather.WeatherFragment"/>
+        android:name="vn.edu.usth.weather.WeatherFragment">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/frag_weather"
+            android:background="@drawable/frame">
+
+            <TextView
+                android:id="@+id/weather_desc"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:text="@string/weather_desc"
+                android:textColor="@color/colorBlack"
+                android:layout_marginTop="15dp"
+                android:layout_marginLeft="15dp"
+                android:layout_alignParentStart="true" />
+
+            <ImageView
+                android:id="@+id/imagecenter"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_centerInParent="true"
+                android:src="@drawable/wea_ther1" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/weather_location"
+                android:text="@string/weather_loc"
+                android:textColor="@color/colorBlack"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+
+        </RelativeLayout>
+    </FrameLayout>>
 
         <FrameLayout
             android:layout_width="match_parent"
