--- a/USTHWeather/app/src/main/res/values/colors.xml
+++ b/USTHWeather/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorBlack">#000000</color>
-    <color name="colorBlue">#baf7ce</color>
+    <color name="colorBlue">#ccbaf7ce</color>
     <color name="colorMain">#ddddfc</color>
 </resources>
